--- a/week_09/case_study_09.Rmd
+++ b/week_09/case_study_09.Rmd
@@ -1,7 +1,101 @@
 ---
-title: "Case Study 09"
-author: Your Name
-date: August 1, 2020
-output: github_document
+title: "Case Study 09: Tracking Hurricanes"
+author: Stephen Sanders
+date: October 31, 2024
+output: html_document
 ---
- 
+
+```{r setup, warning = FALSE, message = FALSE}
+# import necessary libraries
+library(sf)
+library(tidyverse)
+library(ggmap)
+library(spData)
+library(gt)
+library(knitr)
+```
+
+```{r load_data, warning = FALSE, message = FALSE}
+# download world and us_states datasets
+data(world)
+data(us_states)
+
+# download csv file from noaa with storm track information
+dataurl="https://www.ncei.noaa.gov/data/international-best-track-archive-for-climate-stewardship-ibtracs/v04r01/access/csv/ibtracs.NA.list.v04r01.csv"
+
+storm_data <- read_csv(dataurl)
+
+# convert LAT/LON values to NA
+storm_data$LON <- as.numeric(as.character(storm_data$LON))
+storm_data$LAT <- as.numeric(as.character(storm_data$LAT))
+
+# filter out rows with incompatible LAT/LON values,
+# filter for storms occurring in >= 1950,
+# then convert to sf
+storm_data <- 
+  storm_data %>%
+  mutate_if(is.numeric, function(x) ifelse(x == -999.0, NA, x)) %>%
+  filter((!is.na(LAT) & !is.na(LON)) & SEASON >= 1950) %>%
+  mutate(decade = floor(as.numeric(SEASON) / 10) * 10) %>%
+  st_as_sf(coords = c('LON', 'LAT')) %>%
+  st_set_crs(st_crs(world))
+
+# get extent of storm data
+region <- st_bbox(storm_data)
+```
+
+```{r storms_map, warning = FALSE, message = FALSE}
+# plot US storms for each decade from 1950 to present
+ggplot() +
+  geom_sf(data = world) +
+  geom_sf(data = storm_data) +
+  facet_wrap(~decade) +
+  stat_bin2d(data = storm_data, aes(y = st_coordinates(storm_data)[,2],
+                 x = st_coordinates(storm_data)[,1]), bins = 100) +
+  scale_fill_distiller(palette = 'YlOrRd', 
+                       trans = 'log', 
+                       direction = -1, 
+                       breaks = c(1, 10, 100, 1000)) +
+  coord_sf(ylim = region[c(2, 4)], xlim = region[c(1, 3)]) +
+  theme(axis.title = element_blank())
+```
+
+```{r state_table, warning = FALSE, message = FALSE}
+# project us_states to same projection as storm_data
+us_states.proj <- st_transform(us_states, crs = st_crs(storm_data)) %>%
+  rename(state = NAME)
+
+# spatial join storm_data and us_states.proj
+storm_states <- st_join(storm_data, us_states.proj, left = FALSE)
+
+# create table of top 5 states with most storms
+storm_states.tab <- storm_states %>%
+  st_drop_geometry() %>%
+  group_by(state) %>%
+  summarize(storms = length(unique(NAME))) %>%
+  arrange(desc(storms)) %>%
+  subset(select = c(state, storms)) %>%
+  slice(1:5) %>%
+  gt()
+
+storm_states.tab
+```
+
+```{r other_map, warning = FALSE, message= FALSE}
+# create storms by state and year df
+# use SEASON column to create year column
+# calculate number of storms in each state for each year
+storm_states_yr <- storm_states %>%
+  mutate(year = as.numeric(SEASON)) %>%
+  st_drop_geometry() %>%
+  group_by(state, year) %>%
+  summarize(storms = length(unique(NAME)))
+
+# plot number of storms in each state in each year from 1950 to present
+ggplot(storm_states_yr, aes(x = year, y = fct_reorder(state, storms, .fun = sum))) +
+  geom_tile(aes(fill = storms)) +
+  scale_x_continuous(breaks = seq(1950, 2025, 25), limits = c(1950, 2025)) +
+  scale_fill_viridis_c(name = '# Storms', option = 'magma') +
+  xlab('Year') +
+  ylab('State')
+```
