--- a/week_10/case_study_10.Rmd
+++ b/week_10/case_study_10.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Case Study 10"
 author: Stephen Sanders
-date: August 1, 2020
+date: 12/6/2024
 output: github_document
 ---
 ## Set up and initial data exploration
